<resources>
    <string name="app_name">Calculator</string>
    <string name="equal">=</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="equalsign">=</string>
    <string name="ce">CE</string>
    <string name="more">MORE</string>
    <string name="del">DEL</string>
    <string name="placeholder_text">|</string>
    <string name="press">Press</string>
    <string name="error_message">Error: Try again</string>
    <string name="reset">Reset</string>
</resources>
