<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00AAA3A3">

    <EditText
        android:id="@+id/screenTextView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@android:color/transparent"
        android:cursorVisible="true"
        android:gravity="bottom|right"
        android:hint="@string/press"
        android:importantForAutofill="no"
        android:inputType="none"
        android:paddingEnd="5dp"
        android:textSize="90sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prevTextView"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:paddingEnd="5dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenTextView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prevTextView">

        <Spinner
            android:id="@+id/itemSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/delBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:onClick="deleteLast"
            android:text="@string/del" />

        <Button
            android:id="@+id/ceBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/ce" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toTopOf="@+id/computeBtn"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/num1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/_1"
            android:textSize="60sp"
            tools:layout_editor_absoluteY="228dp" />

        <Button
            android:id="@+id/num2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/_2"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="228dp" />

        <Button
            android:id="@+id/num3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/_3"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="363dp"
            tools:layout_editor_absoluteY="228dp" />

        <Button
            android:id="@+id/num4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/_4"
            android:textSize="60sp"
            tools:layout_editor_absoluteY="432dp" />

        <Button
            android:id="@+id/num5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/_5"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="432dp" />

        <Button
            android:id="@+id/num6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/_6"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="363dp"
            tools:layout_editor_absoluteY="432dp" />

        <Button
            android:id="@+id/num7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/_7"
            android:textSize="60sp"
            tools:layout_editor_absoluteY="635dp" />

        <Button
            android:id="@+id/num8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/_8"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="635dp" />

        <Button
            android:id="@+id/num9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/_9"
            android:textSize="60sp"
            tools:layout_editor_absoluteX="363dp"
            tools:layout_editor_absoluteY="635dp" />

    </GridLayout>

    <Button
        android:id="@+id/computeBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_red_dark"
        android:gravity="center"
        android:onClick="computeAns"
        android:text="@string/equalsign"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="revealActivity"
        app:backgroundTint="#2B2B2B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_hamburger"
        tools:srcCompat="@drawable/ic_hamburger" />

</android.support.constraint.ConstraintLayout>